[gd_scene load_steps=2 format=3 uid="uid://dg6v5vq0niemv"]

[ext_resource type="Script" path="res://addons/exportdownloader/tool_panel.gd" id="1_cx5y7"]

[node name="Lootfabriq plugin" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -730.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cx5y7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Instance ID"
horizontal_alignment = 1

[node name="TextEditInstanceID" type="TextEdit" parent="VBoxContainer"]
clip_contents = false
custom_minimum_size = Vector2(0, 37)
layout_mode = 2
text = "YOUR_INSTANCE_ID"

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "API TOKEN"
horizontal_alignment = 1

[node name="TextEditAPIKey" type="TextEdit" parent="VBoxContainer"]
clip_contents = false
custom_minimum_size = Vector2(0, 37)
layout_mode = 2
size_flags_vertical = 2
text = "YOUR_API_TOKEN"

[node name="Label3" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Path to export dictionaries"
horizontal_alignment = 1

[node name="TextEditExportPath" type="TextEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 37)
layout_mode = 2
text = "res://assets/dictionaries"

[node name="Label4" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Path to export images"
horizontal_alignment = 1

[node name="TextEditExportImagePath" type="TextEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 37)
layout_mode = 2
text = "res://assets/sprites"

[node name="DownloadDictionariesButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Download"

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer"]
layout_mode = 2
